salesforce-twitter integration task/force-app/main/default/objects/Twitter_API_Setting__mdt/fields/API_Key_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Secret__c</fullName>
    <label>API Key Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>