salesforce-twitter integration task/force-app/main/default/objects/Twitter_API_Setting__mdt/fields/Auth_Header__c.field-meta.xml
<CustomField>
    <fullName>Auth_Header__c</fullName>
    <label>Auth Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>