salesforce-twitter integration task/force-app/main/default/objects/Twitter_API_Setting__mdt/fields/Twitter_Delete_URL_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Delete_URL_Endpoint__c</fullName>
    <label>Twitter Delete URL Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>