salesforce-twitter integration task/force-app/main/default/objects/Twitter_API_Setting__mdt/fields/Twitter_OAuth_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Twitter_OAuth_Token_URL__c</fullName>
    <label>Twitter OAuth Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>