salesforce-twitter integration task/force-app/main/default/objects/Twitter_API_Setting__mdt/fields/Twitter_Post_URL_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Post_URL_Endpoint__c</fullName>
    <label>Twitter Post URL Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>